--- a/website/index.html
+++ b/website/index.html
@@ -6,17 +6,35 @@
 		<br>
 		A clock for camping in the desert</br>
 		<br>
-		<a href=tauclock4.apk>tauclock4.apk</a><br>
+		<a href=tauclock5.apk>tauclock5.apk</a><br>
 		<br>
-		NB: you may need to uninstall previous versions before installing this version<br>
+		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
 		<img src=example.png><br>
 		<br>
 	</center>
 	</font>
+<hr>
 === CHANGELOG === <br>
+<hr>
 <ul>
-	<li>tauclock4
+	<li>v0.5 (tauclock5.apk)
+		<ul>
+			<li>select location provider by tapping in upper left</li>
+			<li>for manual location:
+				<ul>
+					<li>select "manual" in upper left</li>
+					<li>press and hold anywhere on dial</li>
+					<li>drag planet to place center cross on desired position</li>
+					<li>release</li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+</ul>
+<hr>
+<ul>
+	<li>v0.4 (tauclock4.apk)
 		<ul>
 			<li>better handling on devices w/o gps</li>
 			<li>added dithering to twilight edges</li>
