--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping in the desert</br>
 		<br>
-		<a href=tauclock5.apk>tauclock5.apk</a><br>
+		<a href=tauclock5.apk>tauclock_0_5.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -18,15 +18,21 @@
 === CHANGELOG === <br>
 <hr>
 <ul>
-	<li>v0.5 (tauclock5.apk)
+	<li>v0.5 (tauclock_0_5.apk)
 		<ul>
 			<li>select location provider by tapping in upper left</li>
 			<li>for manual location:
 				<ul>
 					<li>select "manual" in upper left</li>
 					<li>press and hold anywhere on dial</li>
-					<li>drag planet to place center cross on desired position</li>
+					<li>drag earth to place center cross on desired position</li>
 					<li>release</li>
+				</ul>
+			</li>
+			<li>known issues:
+				<ul>
+					<li>for circumpolar planets above horizon, symbols are not drawn</li>
+					<li>no way (yet) to change time zone from system time zone</li>
 				</ul>
 			</li>
 		</ul>
