--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping in the desert</br>
 		<br>
-		<a href=tauclock5.apk>tauclock_0_5.apk</a><br>
+		<a href=tauclock_0_5.apk>tauclock_0_5.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
