--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
-		<img src=example.png><br>
+		<table><tr><td><img width=320 src=example1.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
 	</center>
 	</font>
