--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping in the desert</br>
 		<br>
-		<a href=tauclock_0_5.apk>tauclock_0_5.apk</a><br>
+		<a href=tauclock_0_6.apk>tauclock_0_6.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -16,6 +16,21 @@
 	</font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.6 (tauclock_0_6.apk)
+		<ul>
+			<li>fixed problems on android 8 &amp; 9</li>
+			<li>made cross in manual mode more visible</li>
+			<li>added symbols for circumpolar planets</li>
+			<li>known issues:
+				<ul>
+					<li>no way (yet) to change time zone from system time zone</li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.5 (tauclock_0_5.apk)
