--- a/website/index.html
+++ b/website/index.html
@@ -4,9 +4,9 @@
 	<center>
 		<font size=+8><b>tauclock</b></font><br>
 		<br>
-		A clock for camping in the desert</br>
+		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_6.apk>tauclock_0_6.apk</a><br>
+		<a href=tauclock_0_7.apk>tauclock_0_7.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -16,6 +16,21 @@
 	</font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.7 (tauclock_0_7.apk)
+		<ul>
+			<li>fixed gimble lock problems</li>
+			<li>in "manual" mode, globe can be rotated with two fingers</li>
+			<li>changed planet colors for visibility</li>
+			<li>known issues:
+				<ul>
+					<li>no way (yet) to change time zone from system time zone</li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.6 (tauclock_0_6.apk)
