improved manual timezone

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_7.apk>tauclock_0_7.apk</a><br>
+		<a href=tauclock_0_8.apk>tauclock_0_8.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -16,6 +16,16 @@
 	</font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.8 (tauclock_0_8.apk)
+		<ul>
+			<li>added "Settings" page, tap in lower right to access</li>
+			<li>tap lower left to change timezone provider (set in settings)</li>
+			<li>settings can also specify offset for Julian Date</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.7 (tauclock_0_7.apk)
