prep for v0.9 release

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_8.apk>tauclock_0_8.apk</a><br>
+		<a href=tauclock_0_9.apk>tauclock_0_9.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -16,6 +16,16 @@
 	</font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.9 (tauclock_0_9.apk)
+		<ul>
+			<li>fixed crashing bug on invalid manual locations</li>
+			<li>fixed crashing bug on timezone engine fail</li>
+			<li>fixed bug with system timezone provider when switching timezones</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.8 (tauclock_0_8.apk)
