--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_9.apk>tauclock_0_9.apk</a><br>
+		<a href=tauclock_0_10.apk>tauclock_0_10.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -16,6 +16,16 @@
 	</font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.10 (tauclock_0_10.apk)
+		<ul>
+			<li>numerous drawing tweaks</li>
+			<li>initialize timezone engine in background</li>
+			<li>fixed some bugs updating preference settings</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.9 (tauclock_0_9.apk)
