--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_10.apk>tauclock_0_10.apk</a><br>
+		<a href=tauclock_0_11.apk>tauclock_0_11.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -16,6 +16,16 @@
 	</font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.11 (tauclock_0_11.apk)
+		<ul>
+			<li>when in "manual" offset mode, tapping left or right edge changes offset</li>
+			<li>algorithm changes to improve accuracy and reduce CPU load</li>
+			<li>minor graphic changw, draw now hand UNDER moon</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.10 (tauclock_0_10.apk)
