prep for release v0.12

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_11.apk>tauclock_0_11.apk</a><br>
+		<a href=tauclock_0_12.apk>tauclock_0_12.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -16,6 +16,14 @@
 	</font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.12 (tauclock_0_12.apk)
+		<ul>
+			<li>omnibus bugfix for numerous drawing problems</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.11 (tauclock_0_11.apk)
