updated web page

--- a/website/index.html
+++ b/website/index.html
@@ -21,6 +21,11 @@
 	<li>v0.12 (tauclock_0_12.apk)
 		<ul>
 			<li>omnibus bugfix for numerous drawing problems</li>
+			<li>known issues:
+				<ul>
+					<li>drawing is slower than previous versions</li>
+				</ul>
+			</li>
 		</ul>
 	</li>
 </ul>
