more prep for v0.14

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_13.apk>tauclock_0_13.apk</a><br>
+		<a href=tauclock_0_14.apk>tauclock_0_14.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -16,6 +16,16 @@
 	</font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.14 (tauclock_0_14.apk)
+		<ul>
+			<li>fixes embarrassing cache update bug</li>
+			<li>adds "first point of Aries" rise and set</li>
+			<li>daylight/darkness duration properly dodges rise/set in polar areas</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.13 (tauclock_0_13.apk)
