--- a/website/index.html
+++ b/website/index.html
@@ -18,6 +18,14 @@
 === CHANGELOG === <br>
 <hr>
 <ul>
+	<li>v0.15 (tauclock_0_15.apk)
+		<ul>
+			<li>more performance and bug fixes</li>
+		</ul>
+	</li>
+</ul>
+<hr>
+<ul>
 	<li>v0.14 (tauclock_0_14.apk)
 		<ul>
 			<li>fixes embarrassing cache update bug</li>
