web site update

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_15.apk>tauclock_0_15.apk</a><br>
+		<a href=tauclock_0_16.apk>tauclock_0_16.apk</a><br>
 		<br>
 		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
 		<br>
@@ -16,6 +16,17 @@
 	</font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.16 (tauclock_0_16.apk)
+		<ul>
+			<li>UI buttons</li>
+			<li>EULA on startup</li>
+			<li>Alarms</li>
+			<li>known issues: Android Alarm integration sucks</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.15 (tauclock_0_15.apk)
