--- a/website/index.html
+++ b/website/index.html
@@ -15,6 +15,8 @@
 	</center>
 	</font>
 <hr>
+You can read all about it in <a href="primer.html">the tauclock primer</a>
+<hr>
 === CHANGELOG === <br>
 <hr>
 <ul>
