--- a/website/primer.html
+++ b/website/primer.html
@@ -64,6 +64,11 @@
 				A printed time also appears at the top of the dial, indicating
 				when the Sun will be at its highest point, or "transit"<br>
 				<br>
+				These printed times may be in italic text, indicating they
+				occurred in the past (within the 12 hours before the "now hand")
+				or in bold text, indicating they will occur in the future
+				(within the 12 hours after the "now hand").<br>
+				<br>
 				Hours and minutes of daylight and darkness are also given.<br>
 				<br>
 				Just outside the inner circle is a depiction of the phase of
@@ -114,7 +119,7 @@
 				some providers may be disabled in the Android system settings.
 				The location providers are:
 				<ul>
-					<li>best (let Android chose what is best for this device</li>
+					<li>best (let Android chose what is best for this device)</li>
 					<li>fused (uses a combination of GPS and Network providers)</li>
 					<li>gps (uses GPS satellites to determine location)</li>
 					<li>network (uses Cellular of WiFi network)</li>
