--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,9 @@
 	</center>
 	</font>
 <hr>
+<font size=+3>
 You can read all about it in <a href="primer.html">the tauclock primer</a>
+</font>
 <hr>
 === CHANGELOG === <br>
 <hr>
