--- a/website/index.html
+++ b/website/index.html
@@ -6,9 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_16.apk>tauclock_0_16.apk</a><br>
-		<br>
-		NB: if you have a version before v0.4, you may need to uninstall before installing this version<br>
+		<a href=tauclock_0_17.apk>tauclock_0_17.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=example1.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
@@ -20,6 +18,16 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 </font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.17 (tauclock_0_17.apk)
+		<ul>
+			<li>renamed alarm "offset" to "delay"</li>
+			<li>Added autocomplete to manual location settings.</li>
+			<li>known issues: Android Alarm integration sucks</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.16 (tauclock_0_16.apk)
