--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
 		<br>
 		<a href=tauclock_0_17.apk>tauclock_0_17.apk</a><br>
 		<br>
-		<table><tr><td><img width=320 src=example1.png></td><td><img width=320 src=example2.png></td></tr></table><br>
+		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
 	</center>
 	</font>
