--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_18.apk>tauclock_0_18.apk</a><br>
+		<a href=tauclock_0_19.apk>tauclock_0_19.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
@@ -18,6 +18,16 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 </font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.19 (tauclock_0_19.apk)
+		<ul>
+			<li>improved default alarm descriptions</li>
+			<li>fixed crashing bug on screen rotation</li>
+			<li>known issues: Android Alarm integration sucks</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.18 (tauclock_0_18.apk)
