added info about autocomplete manual location settings

--- a/website/primer.html
+++ b/website/primer.html
@@ -178,7 +178,7 @@
 	If the location provider is "manual", the location can be entered via latitude
 	and longitude on the Settings page, OR the user can press anywhere in the dial,
 	causing a graphic of the earth to appear, which can then be dragged to the
-	desired location. (see below)
+	desired location. (see graphic below, as well as settings page instructions)
 	<br>
 	Also appearing along the bottom button row are the "&lt;" and "&gt;" buttons.<br>
 	<br>
@@ -216,6 +216,10 @@
 	on the main clock view.  This page allows you to select various
 	information providers, as well as values to use when a provider
 	is set to "manual".<br>
+	<br>
+	The "manual" setting for location will allow you to type in raw
+	latitude, longitude coordinates, OR you can type in a city name
+	and select from a drop down list of possibilities.<br>
 	<br>
 	<hr><i>please refer to figure 3 on the left</i><hr>
 	<br>
