updated changelog for primer updates

--- a/website/index.html
+++ b/website/index.html
@@ -24,6 +24,7 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 		<ul>
 			<li>improved default alarm descriptions</li>
 			<li>fixed crashing bug on screen rotation</li>
+			<li>updated primer for manual location autocomplete</li>
 			<li>known issues: Android Alarm integration sucks</li>
 		</ul>
 	</li>
