--- a/website/index.html
+++ b/website/index.html
@@ -22,6 +22,7 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 <ul>
 	<li>v0.21 (tauclock_0_21.apk)
 		<ul>
+			<li>updated IDE to Android Studio Dolphin</li>
 			<li>expanded the list of cities in settings manual location autocomplete</li>
 			<li>implemented edit for alarms</li>
 			<li>all alarms now repeat</li>
