--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_21.apk>tauclock_0_21.apk</a><br>
+		<a href=tauclock_0_22.apk>tauclock_0_22.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
@@ -18,6 +18,17 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 </font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.22 (tauclock_0_22.apk)
+		<ul>
+			<li>fixed problems on Android Go</li>
+			<li>fixed problems on screen rotation</li>
+			<li>fixed problems with planet arcs on small screens</li>
+			<li>known issues: repeating alarms are poorly tested and may not function on all devices under all conditions</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.21 (tauclock_0_21.apk)
