gray manual settings when manual provider not selected

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_22.apk>tauclock_0_22.apk</a><br>
+		<a href=tauclock_0_23.apk>tauclock_0_23.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
@@ -20,6 +20,11 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 === CHANGELOG === <br>
 <hr>
 <ul>
+	<li>v0.23 (tauclock_0_23.apk)
+		<ul>
+			<li>grey out manual settings when manual provider is not selected </li>
+		</ul>
+	</li>
 	<li>v0.22 (tauclock_0_22.apk)
 		<ul>
 			<li>fixed problems on Android Go</li>
