ported changes back from standalone

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_23.apk>tauclock_0_23.apk</a><br>
+		<a href=tauclock_0_24.apk>tauclock_0_24.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
@@ -18,6 +18,16 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 </font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.24 (tauclock_0_24.apk)
+		<ul>
+			<li>allow user settings to select twilights as "light" or "dark"</li>
+			<li>modify clock outer ring color to indicate light/twilight/dark</li>
+			<li>made clock outer ring thicker</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.23 (tauclock_0_23.apk)
