updated web site

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_24.apk>tauclock_0_24.apk</a><br>
+		<a href=tauclock_0_25.apk>tauclock_0_25.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
@@ -18,6 +18,16 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 </font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.25 (tauclock_0_25.apk)
+		<ul>
+			<li>fix bug that prevented daylight or darkness hours from displaying</li>
+			<li>added display of twilight hours for near-polar cases</li>
+			<li>made times and hour durations easier to read when now hand overlaps</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.24 (tauclock_0_24.apk)
