--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_25.apk>tauclock_0_25.apk</a><br>
+		<a href=tauclock_0_26.apk>tauclock_0_26.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
@@ -18,6 +18,14 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 </font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.26 (tauclock_0_26.apk)
+		<ul>
+			<li>allow dates in YYYY-MM-DD format in "manual offset"</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.25 (tauclock_0_25.apk)
