--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_26.apk>tauclock_0_26.apk</a><br>
+		<a href=tauclock_0_27.apk>tauclock_0_27.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
@@ -18,6 +18,16 @@ You can read all about it in <a href="primer.html">the tauclock primer</a>
 </font>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.27 (tauclock_0_27.apk)
+		<ul>
+			<li>rename "darkness" to "night" (avoid confusion with "dark")</li>
+			<li>rename "daylight" to "sun up" (avoid confusion with "light")</li>
+			<li>fixed longstanding text drawing bug with spaces</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.26 (tauclock_0_26.apk)
