--- a/website/index.html
+++ b/website/index.html
@@ -14,8 +14,10 @@
 	</font>
 <hr>
 <font size=+3>
-You can read all about it in <a href="primer.html">the tauclock primer</a>
+You can read all about it in <a href="primer_000.html">the tauclock primer</a><br>
 </font>
+(best on desktop, or see the older primer for mobile devices at
+<a href="primer.html">the older tauclock primer</a>
 <hr>
 === CHANGELOG === <br>
 <hr>
